# pjecz-casiopea-api-key

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  pyproject.toml.poetry  requirements.txt
pjecz_casiopea_api_key/: main.py  settings.py
pjecz_casiopea_api_key/config/: settings.py
pjecz_casiopea_api_key/dependencies/: authentications.py  control_acceso.py  cryptography_api_key.py  database.py  fastapi_not_implemented.py  fastapi_pagination_custom_list.py  fastapi_pagination_custom_page.py  pwgen.py  safe_string.py  schemas_base.py
pjecz_casiopea_api_key/models/: autoridades.py  bitacoras.py  cit_categorias.py  cit_citas.py  cit_clientes.py  cit_clientes_recuperaciones.py  cit_clientes_registros.py  cit_dias_inhabiles.py  cit_horas_bloqueadas.py  cit_oficinas_servicios.py  cit_servicios.py  distritos.py  domicilios.py  entradas_salidas.py  exp_juzgados.py  materias.py  modulos.py  oficinas.py  permisos.py  roles.py  usuarios.py  usuarios_oficinas.py  usuarios_roles.py
pjecz_casiopea_api_key/routers/: autoridades.py  bitacoras.py  cit_categorias.py  cit_citas.py  cit_clientes.py  cit_clientes_recuperaciones.py  cit_clientes_registros.py  cit_dias_diponibles.py  cit_dias_disponibles.py  cit_dias_inhabiles.py  cit_horas_bloqueadas.py  cit_horas_disponibles.py  cit_oficinas_servicios.py  cit_servicios.py  distritos.py  domicilios.py  entradas_salidas.py  exp_juzgados.py  materias.py  modulos.py  oficinas.py  permisos.py  roles.py  usuarios.py  usuarios_oficinas.py  usuarios_roles.py
pjecz_casiopea_api_key/schemas/: autoridades.py  bitacoras.py  cit_categorias.py  cit_citas.py  cit_clientes.py  cit_clientes_recuperaciones.py  cit_clientes_registros.py  cit_dias_disponibles.py  cit_dias_inhabiles.py  cit_horas_bloqueadas.py  cit_horas_disponibles.py  cit_oficinas_servicios.py  cit_servicios.py  distritos.py  domicilios.py  entradas_salidas.py  exp_juzgados.py  materias.py  modulos.py  oficinas.py  permisos.py  roles.py  usuarios.py  usuarios_oficinas.py  usuarios_roles.py
pjecz_casiopea_api_key/services/: codigo_barras.py  sendmail.py
pjecz_casiopea_api_key/templates/email/: cita_cancelada.jinja2  cita_creada.jinja2
tests/: README.md  __init__.py  test_autoridades.py  test_boletines.py  test_cit_citas.py  test_cit_clientes.py  test_cit_clientes_recuperaciones.py  test_cit_clientes_registros.py  test_cit_dias_inhabiles.py  test_cit_oficinas_servicios.py  test_distritos.py  test_domicilios.py  test_oficinas.py  test_usuarios.py
