[project]
name = "pjecz-casiopea-api-key"
version = "1.4.1"
description = "API con autentificación APi-Key para comunicación con el sistema de gestión SAJI."
authors = [
    "Guillermo Valdes <guillermo.valdes@pjecz.gob.mx>",
    "Lucía Aranda <lucia.aranda@pjecz.gob.mx>",
    "ricval <ricardo.valdes@pjecz.gob.mx>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.6",
    "fastapi>=0.135.3",
    "fastapi-pagination[sqlalchemy]>=0.15.12",
    "google-cloud-storage>=3.10.1",
    "gunicorn>=25.3.0",
    "hashids>=1.3.1",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-barcode>=0.16.1",
    "python-multipart>=0.0.24",
    "pytz>=2026.1.post1",
    "requests>=2.33.1",
    "sendgrid>=6.12.5",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-utils>=0.42.1",
    "unidecode>=1.4.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "faker (>=38.2.0,<39.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "pylint-sqlalchemy (>=0.3.0,<0.4.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"

[tool.basedpyright]
typeCheckingMode = "basic"
reportCallIssue = "hint"
reportMissingImports = "warning"
reportUndefinedVariable = "warning"
exclude = ["**/tests"]

[tool.ruff]
ignore = ["F821"]
line-length = 128
